--- a/ProductHuntExample/Base.lproj/Main.storyboard
+++ b/ProductHuntExample/Base.lproj/Main.storyboard
@@ -120,6 +120,56 @@
             </objects>
             <point key="canvasLocation" x="301.60000000000002" y="371.96401799100454"/>
         </scene>
+        <!--Comments-->
+        <scene sceneID="6bQ-ii-A7u">
+            <objects>
+                <viewController storyboardIdentifier="commentsView" title="Comments" id="h6c-7N-W6T" customClass="CommentsTableViewController" customModule="ProductHuntExample" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="tJd-Ex-Mub">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="YU7-Zk-7z9">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="124" id="tUs-Mb-f3m" customClass="CommentTableViewCell" customModule="ProductHuntExample" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="124"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="tUs-Mb-f3m" id="Tnj-Ih-uCw">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="123.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="oN5-FG-ZrA">
+                                                    <rect key="frame" x="15" y="15" width="345" height="93.5"/>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <mutableString key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</mutableString>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                                </textView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="oN5-FG-ZrA" secondAttribute="bottom" constant="15" id="PDj-IL-Q6Q"/>
+                                                <constraint firstItem="oN5-FG-ZrA" firstAttribute="top" secondItem="Tnj-Ih-uCw" secondAttribute="top" constant="15" id="Xvq-1B-cly"/>
+                                                <constraint firstItem="oN5-FG-ZrA" firstAttribute="leading" secondItem="Tnj-Ih-uCw" secondAttribute="leading" constant="15" id="cJB-tK-6aE"/>
+                                                <constraint firstAttribute="trailing" secondItem="oN5-FG-ZrA" secondAttribute="trailing" constant="15" id="wvh-Zu-CfB"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="8Wv-x4-S4h"/>
+                    </view>
+                    <connections>
+                        <outlet property="commentsTableView" destination="YU7-Zk-7z9" id="t0p-0A-sww"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Kuu-3p-2BK" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1064.8" y="371.96401799100454"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="JHu-3g-Awj">
             <objects>
